<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- generali -->
    <string name="app_name">Time4News</string>
    <string name="title_profile">Profile</string>
    <string name="title_news_categories">News Categories</string>
    <string name="title_my_news">My News</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_failed">Login non eseguito</string>
    <string name="title_activity_login">Login</string>
    <string name="action_undo">Annulla</string>
    <string name="title_feed">Top News</string>
    <!-- top news fragment -->
    <string name="no_data_available_feed">Non sono disponibili news per le piattaforme che segui. Prova a dare un\'occhiata alla sezione Scopri!</string>


    <!-- profile settings tab -->
    <string name="profile_username">Nome e Cognome</string>
    <string name="profile_username_not_found">Nome utente non disponibile</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_not_found">Email non disponibile</string>
    <string name="profile_logout">Esci</string>
    <string name="profile_delete">Elimina account</string>

    <!-- saved news tab -->
    <string name="no_localnews_available">Non hai salvato alcuna notizia. Puoi salvare le notizie dal feed oppure dalla sezione news categories!</string>
    <string name="fav_news_removed">News rimossa dalle salvate</string>
    <string name="fav_news_added">News salvata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="username">Username insesistente</string>
    <string name="news_img_description">Immagine della notizia</string>
    <string name="hai_gi_un_account">Hai già un account ?</string>
    <string name="register">Register</string>
    <string name="form_name_surname">Nome e Cognome</string>
    <string name="non_hai_ancora_un_account">Non hai ancora un account ?</string>
    <string name="registration_failure">An error occured</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>



</resources>